plugins {
    id "org.unbroken-dome.test-sets" version "1.4.2"
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

jar {
    baseName = 'what-to-watch-boot'
}
sourceCompatibility = 1.9
targetCompatibility = 1.9

repositories {
    mavenCentral()
}

testSets {
    benchmark
}

configurations {
    compile.exclude module: "spring-boot-starter-tomcat"
}

dependencies {
    runtime("org.springframework.boot:spring-boot-properties-migrator")

    compile "org.springframework.boot:spring-boot-starter-actuator"
    runtime "io.micrometer:micrometer-registry-prometheus"

    compile "org.springframework.boot:spring-boot-starter-jersey"
    compile "org.springframework.boot:spring-boot-starter-data-redis"
    compile "org.springframework.boot:spring-boot-starter-web"
    compile "org.springframework.boot:spring-boot-starter-undertow:$springBootVersion"
    compile "com.google.guava:guava:$guavaVersion"
    compile "redis.clients:jedis:$jedisVersion"
    compile "org.jsoup:jsoup:$jsoupVersion"
    compile "net.jodah:failsafe:$failsafeVersion"
    compile "io.micrometer:micrometer-core:$micrometerVersion"
    compile project(":what-to-watch-core")

    testCompile "org.springframework.boot:spring-boot-starter-test"

    benchmarkCompile "org.openjdk.jmh:jmh-core:$jmhVersion"
    benchmarkCompile "org.openjdk.jmh:jmh-generator-annprocess:$jmhVersion"
}

test {
    jvmArgs += ["--add-modules", "java.xml.bind"]
}